# Twitch-Chat-Logger

./: .env  .gitignore  Cargo.toml  README.md  config.json
scripts/: create_db.sh  switch_db.sh
src/: main.rs
