[package]
name = "chat_logger"
version = "1.5.0"
authors = ["GCNull <>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
termion = "1.5.6"
rand = "0.8.3"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde_json = "1.0.64"
postgres = "0.19.1"
