[package]
name = "chat_logger"
version = "2.2.4"
authors = ["GCNull"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
postgres = { version = "0.19.1", features = ["with-chrono-0_4"] }
chrono = "0.4.19"
termion = "1.5.6"
rand = "0.8.3"
serde_json = "1.0.64"
serde_derive = "1.0.126"
serde = "1.0.125"

[profile.release]
lto = 'thin'
#panic = 'abort'
codegen-units = 1
